Logo-adjusted size.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@
 
 .portfolio-logo {
   font-family: NextSphereBold;
-  font-size: medium;
+  font-size: 13px;
 }
 .portfolio-logo-footer {
   font-family: NextSphereBold;
