Headline update & logo line height

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
 .portfolio-logo {
   font-family: NextSphereBold;
   font-size: 13px;
+  line-height: 9px;
 }
 .portfolio-logo-footer {
   font-family: NextSphereBold;
