--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -144,7 +144,7 @@ pre {
   margin: 0;
   line-height: 0.2;
 }
-#Birthday .text-wrapper > :nth-child(9) .SplitTextJS-char {
+/* #Birthday .text-wrapper > :nth-child(9) .SplitTextJS-char {
   color:  rgba(186, 132, 255, 1);
   font-family: NextSphereBold;
   background-image: linear-gradient(90deg, #0bbdda 0%, #7d58f2 39%, #fb71ae);
@@ -154,6 +154,19 @@ pre {
   text-fill-color: transparent;
   font-size: 2rem;
   line-height: 0.8;
+} */
+.fancy-text {
+  display: inline-block;
+  color:  rgba(186, 132, 255, 1);
+  font-family: NextSphereBold;
+  background-image: linear-gradient(90deg, #0bbdda 0%, #7d58f2 39%, #fb71ae);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  font-size: 2rem;
+  line-height: 0.8;
+  transition: all ease-in .4s;
 }
 /* #Birthday .text-wrapper > :nth-child(7) { */
   /* color: rgba(186, 132, 255, 1) !important; Set the desired opacity value directly */
